--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,67 @@
 * {
-    border: 5px green;
-    margin: 0;
+    border: 1px solid black;
+    
 }
+
+body {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: beige;
+}
+
+.container-1 {
+    display: flex;
+    flex-direction: column;
+}
+
+/* navbar */
+
+.magic-navbar {
+    display: flex;
+    padding:20px 0px 20px 100px;
+    align-items: center;
+
+}
+
+.header-logo img {
+    width: 100px;
+    height: 100px;
+    margin-right: auto;
+}
+
+.header-links {
+    display: flex;
+    margin-left: auto;
+    padding: 0px 100px 0px 0px;
+}
+
+.header-links a {
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px;
+    font-family: 'Roboto', arial;
+}
+
+/* Hero part */
+.container-2 {
+    display: flex;
+    flex-basis: 300px;
+    flex-direction: column;
+    text-align: left;
+    margin-right: 40px;
+}
+
+
+.magic-hero-1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 90px;
+
+}
+
+
+
+
