--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 body {
     padding: 0;
-    margin: 0;
+    margin: 5px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: beige;
@@ -62,6 +62,28 @@ body {
 
 }
 
+.magic-hero-z {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.magic-hero-z img {
+    border-radius: 1%;
+}
 
+.magic.content {
 
+}
+
+.content-info {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+
+.content-info img {
+   width: 300px;
+   height: 300px;
+   border-radius: 1%;
+}
