--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,9 @@ body {
 
 .magic-navbar {
     display: flex;
-    padding:20px 0px 20px 100px;
+    padding:20px 20px 20px 100px;
     align-items: center;
     background-color: black;
-
 }
 
 .magic-navbar a {
@@ -57,47 +56,53 @@ body {
 .container-2 {
     display: flex;
     flex-direction: row;
-    text-align: left;
+    justify-content: center;
+    align-items: center;
     background-color: black;
-    padding: 40px;
+    padding: 30px;
 }
 
 
 .magic-hero-1 {
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center;
+    margin:50px;
 }
 
 .magic-hero-z {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: right;
 }
 
 .magic-hero-z img {
     border-radius: 10%;
-    width: auto;
-    height: 52%;
+    width: 50%;
+    height: 50%;
 }
 
 .magic-hero-button-1 {
-    display: block;
-    text-align: center;
+    display: inline-block;
     width: 110px;
     background-color: palevioletred;
     padding: 10px;
 }
 
+.magic-content {
+    color: black;
+}
 
 .content-info {
    display: flex;
-   flex-direction: row;
-   justify-content: space-between;
+   justify-content: space-around;
+   flex-wrap: wrap;
+   margin: 0;
 }
 
 .content-info img {
-   width: 300px;
-   height: 300px;
-   border-radius: 1%;
+   width: 200px;
+   height: 200px;
+   border-radius: 10%;
 }
